name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , obelisk-route
               , mtl
               , text
  default-extensions:
    LambdaCase
    PolyKinds
    TypeFamilies
  exposed-modules:
    Common.Api
    Common.Route
    Common.Types
