name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , obelisk-route
               , dependent-sum
               , higgledy
               , mtl
               , text
  default-extensions:
    LambdaCase
    PolyKinds
    TypeFamilies
    OverloadedStrings
  exposed-modules:
    Common.Api
    Common.Route
    Common.Types
